force-app/main/default/objects/Role_Split__c/Role_Split__c.object-meta.xml
<CustomObject>
    <label>Role Split</label>
    <nameField>
        <displayFormat>RS-{00000}</displayFormat>
        <label>Role Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Role Splits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>