force-app/main/default/objects/Role_Split__c/fields/Percentage_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Allocation__c</fullName>
    <label>Percentage Allocation</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>