force-app/main/default/objects/Role_Split__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Principal</fullName>
            </value>
            <value>
                <fullName>Initiator</fullName>
            </value>
            <value>
                <fullName>Marketing Team</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Ind/Prod/Geo Person</fullName>
            </value>
            <value>
                <fullName>Private Equity/Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Public Person</fullName>
            </value>
            <value>
                <fullName>Non-Registered</fullName>
            </value>
            <value>
                <fullName>Pricing Committee Approver</fullName>
            </value>
            <value>
                <fullName>Reviewer</fullName>
            </value>
            <value>
                <fullName>Prelim Reviewer</fullName>
            </value>
            <value>
                <fullName>Final Reviewer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>