force-app/main/default/objects/Role_Split__c/validationRules/Role_and_Lob_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Role_and_Lob_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Role__c)) || ISBLANK(TEXT(LOB__c))</errorConditionFormula>
    <errorMessage>Role and LOB must be filled out.</errorMessage>
</ValidationRule>