force-app/main/default/objects/Role_Split__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LOB__c</columns>
    <columns>Role__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Percentage_Allocation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>